--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,5 +1,33 @@
 @import "color";
 
 .col-5{
-    width: calc(100% / 5 - 40px);
+    width: calc(100% - 40px);
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 503px) {  
+    .col-5{
+        width: calc(100% / 2 - 40px);
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {  
+    .col-5{
+        width: calc(100% / 3 - 40px);
+    }
+}
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {  
+    .col-5{
+        width: calc(100% / 4 - 40px);
+    }
+}
+
+// XX-Large devices (larger desktops, 1400px and up)
+@media (min-width: 1400px) { 
+    .col-5{
+        width: calc(100% / 5 - 40px);
+    }
 }
